--- a/model/pyproject.toml
+++ b/model/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "training"
+name = "model"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -11,6 +11,11 @@ scikit-learn = "^1.3.0"
 xgboost = "^1.7.6"
 pandas = "^2.0.3"
 
+
+[tool.poetry.group.serving.dependencies]
+fastapi = {extras = ["uvicorn"], version = "^0.100.0"}
+uvicorn = "^0.23.1"
+google-cloud-storage = "^2.10.0"
 
 [build-system]
 requires = ["poetry-core"]
