add container builds to ci/cd

--- a/cloudbuild/pr-checks.yaml
+++ b/cloudbuild/pr-checks.yaml
@@ -32,6 +32,8 @@ steps:
         make test-all-components
     env:
       - SKIP=terraform-fmt,git-dirty
+      - CONTAINER_IMAGE_REGISTRY=dummy_value
+      - RESOURCE_SUFFIX=default
 
 options:
   logging: CLOUD_LOGGING_ONLY
