--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -14,9 +14,30 @@
 ---
 steps:
 
+  - id: build-training-image
+    name: gcr.io/kaniko-project/executor:latest
+    args:
+      - --context=dir:///workspace/model
+      - --destination=${_TEST_VERTEX_LOCATION}-docker.pkg.dev/${_TEST_VERTEX_PROJECT_ID}/vertex-images/training:${COMMIT_SHA}
+      - --target=training
+      - --cache=true
+      - --compressed-caching=false
+    waitFor: ['-']
+
+  - id: build-serving-image
+    name: gcr.io/kaniko-project/executor:latest
+    args:
+      - --context=dir:///workspace/model
+      - --destination=${_TEST_VERTEX_LOCATION}-docker.pkg.dev/${_TEST_VERTEX_PROJECT_ID}/vertex-images/serving:${COMMIT_SHA}
+      - --target=serving
+      - --cache=true
+      - --compressed-caching=false
+    waitFor: ['-']
+
   # Install Python deps
   # Run end-to-end (E2E) pipeline tests on both pipelines
-  - name: python:3.9
+  - id: e2e-tests
+    name: python:3.9
     entrypoint: /bin/sh
     args:
       - -c
@@ -32,6 +53,10 @@ steps:
       - VERTEX_NETWORK=${_TEST_VERTEX_NETWORK}
       - VERTEX_PIPELINE_ROOT=${_TEST_VERTEX_PIPELINE_ROOT}
       - RESOURCE_SUFFIX=${COMMIT_SHA}
+      - CONTAINER_IMAGE_REGISTRY=${_TEST_VERTEX_LOCATION}-docker.pkg.dev/${_TEST_VERTEX_PROJECT_ID}/vertex-images
+    waitFor:
+      - build-training-image
+      - build-serving-image
 
 options:
   logging: CLOUD_LOGGING_ONLY
