--- a/cloudbuild/release.yaml
+++ b/cloudbuild/release.yaml
@@ -14,6 +14,30 @@
 ---
 steps:
 
+  - id: build-training-image
+    name: gcr.io/kaniko-project/executor:latest
+    args:
+      - --context=dir:///workspace/model
+      - --destination=${_DEV_VERTEX_LOCATION}-docker.pkg.dev/${_DEV_VERTEX_PROJECT_ID}/vertex-images/training:${TAG_NAME}
+      - --destination=${_TEST_VERTEX_LOCATION}-docker.pkg.dev/${_TEST_VERTEX_PROJECT_ID}/vertex-images/training:${TAG_NAME}
+      - --destination=${_PROD_VERTEX_LOCATION}-docker.pkg.dev/${_PROD_VERTEX_PROJECT_ID}/vertex-images/training:${TAG_NAME}
+      - --target=training
+      - --cache=true
+      - --compressed-caching=false
+    waitFor: ['-']
+
+  - id: build-serving-image
+    name: gcr.io/kaniko-project/executor:latest
+    args:
+      - --context=dir:///workspace/model
+      - --destination=${_DEV_VERTEX_LOCATION}-docker.pkg.dev/${_DEV_VERTEX_PROJECT_ID}/vertex-images/serving:${TAG_NAME}
+      - --destination=${_TEST_VERTEX_LOCATION}-docker.pkg.dev/${_TEST_VERTEX_PROJECT_ID}/vertex-images/serving:${TAG_NAME}
+      - --destination=${_PROD_VERTEX_LOCATION}-docker.pkg.dev/${_PROD_VERTEX_PROJECT_ID}/vertex-images/serving:${TAG_NAME}
+      - --target=serving
+      - --cache=true
+      - --compressed-caching=false
+    waitFor: ['-']
+
   # Install poetry, install deps, compile pipelines
   - name: python:3.9
     entrypoint: /bin/sh
@@ -36,6 +60,12 @@ steps:
           --tag=latest \
           --tag=${TAG_NAME}; \
         done
+    env:
+      - RESOURCE_SUFFIX=default
+      - CONTAINER_IMAGE_REGISTRY=${_TEST_VERTEX_LOCATION}-docker.pkg.dev/${_TEST_VERTEX_PROJECT_ID}/vertex-images
+    waitFor:
+      - build-training-image
+      - build-serving-image
 
 options:
   logging: CLOUD_LOGGING_ONLY
