--- a/cloudbuild/trigger-tests.yaml
+++ b/cloudbuild/trigger-tests.yaml
@@ -17,6 +17,8 @@ steps:
     args:
       - '-c'
       - |
+        curl -sSL https://install.python-poetry.org | python3 - && \
+        export PATH="/builder/home/.local/bin:$$PATH" && \
         make setup && \
         make test-trigger
     entrypoint: /bin/sh
