refactor: pipeline trigger code + cloud function

--- a/cloudbuild/pr-checks.yaml
+++ b/cloudbuild/pr-checks.yaml
@@ -28,6 +28,7 @@ steps:
         git init && \
         git add . && \
         make pre-commit && \
+        make test-utils && \
         make compile-pipeline pipeline=training && \
         make compile-pipeline pipeline=prediction && \
         make setup-all-components && \
