--- a/terraform/modules/cloudfunction/src/requirements.txt
+++ b/terraform/modules/cloudfunction/src/requirements.txt
@@ -12,4 +12,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-google-cloud-aiplatform==1.24.1
+google-cloud-aiplatform[pipelines]==1.24.1
