build: update make commands in cloudbuild files

--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -44,7 +44,7 @@ steps:
       - |
         curl -sSL https://install.python-poetry.org | python3 - && \
         export PATH="/builder/home/.local/bin:$$PATH" && \
-        make setup && \
+        make install && \
         make e2e-tests pipeline=training && \
         make e2e-tests pipeline=prediction
     env:
