--- a/cloudbuild/pr-checks.yaml
+++ b/cloudbuild/pr-checks.yaml
@@ -28,11 +28,9 @@ steps:
         git init && \
         git add . && \
         make pre-commit && \
-        make test-utils && \
-        make compile-pipeline pipeline=training && \
-        make compile-pipeline pipeline=prediction && \
-        make setup-all-components && \
-        make test-all-components
+        make compile pipeline=training && \
+        make compile pipeline=prediction && \
+        make test
     env:
       - SKIP=terraform-fmt,git-dirty
       - CONTAINER_IMAGE_REGISTRY=dummy_value
