--- a/components/bigquery-components/pyproject.toml
+++ b/components/bigquery-components/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
 kfp = "^2.0.1"
+pyyaml = "6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 google-cloud-bigquery = "2.30.0"
