--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -21,6 +21,7 @@ google-cloud-pipeline-components = "^2.1.0"
 bigquery-components = { path = "../components/bigquery-components", develop = true }
 vertex-components = { path = "../components/vertex-components", develop = true }
 kfp = "^2.0.1"
+pyyaml = "6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<8.0.0"
