--- a/env.sh.example
+++ b/env.sh.example
@@ -13,10 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-export VERTEX_CMEK_IDENTIFIER= # optional
-export VERTEX_LOCATION=europe-west2
-export VERTEX_NETWORK= # optional
 export VERTEX_PROJECT_ID=my-gcp-project
+export VERTEX_LOCATION=europe-west2
+export VERTEX_NETWORK=
+export VERTEX_CMEK_IDENTIFIER=
 
 # Suffix (e.g. '<your name>') to facilitate running concurrent pipelines in the same Google Cloud project. Change if working in a team to avoid overwriting resources during development 
 export RESOURCE_SUFFIX=default
