--- a/env.sh.example
+++ b/env.sh.example
@@ -15,6 +15,7 @@
 
 export VERTEX_PROJECT_ID=my-gcp-project
 export VERTEX_LOCATION=europe-west2
+export BQ_LOCATION=US
 export VERTEX_NETWORK=
 export VERTEX_CMEK_IDENTIFIER=
 
