--- a/model/Dockerfile
+++ b/model/Dockerfile
@@ -27,11 +27,11 @@ RUN poetry config virtualenvs.create false && poetry install
 
 FROM builder AS training
 
-COPY training/train.py training/train.py
+COPY training training
 
 FROM builder AS serving
 
 RUN poetry install --with serving
-COPY serving/main.py serving/main.py
+COPY serving serving
 
 CMD exec uvicorn serving.main:app --host "0.0.0.0" --port "$AIP_HTTP_PORT"
