--- a/env.sh.example
+++ b/env.sh.example
@@ -13,16 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-export VERTEX_PROJECT_ID=my-gcp-project
-export VERTEX_LOCATION=europe-west2
-export BQ_LOCATION=US
-export VERTEX_NETWORK=
-export VERTEX_CMEK_IDENTIFIER=
+VERTEX_PROJECT_ID=my-gcp-project
+VERTEX_LOCATION=europe-west2
+BQ_LOCATION=US
+VERTEX_NETWORK=
+VERTEX_CMEK_IDENTIFIER=
 
 # Suffix (e.g. '<your name>') to facilitate running concurrent pipelines in the same Google Cloud project. Change if working in a team to avoid overwriting resources during development 
-export RESOURCE_SUFFIX=default
+RESOURCE_SUFFIX=default
 
 # Leave as-is
-export VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
-export VERTEX_PIPELINE_ROOT=gs://${VERTEX_PROJECT_ID}-pl-root
-export CONTAINER_IMAGE_REGISTRY=${VERTEX_LOCATION}-docker.pkg.dev/${VERTEX_PROJECT_ID}/vertex-images
+VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
+VERTEX_PIPELINE_ROOT=gs://${VERTEX_PROJECT_ID}-pl-root
+CONTAINER_IMAGE_REGISTRY=${VERTEX_LOCATION}-docker.pkg.dev/${VERTEX_PROJECT_ID}/vertex-images
