--- a/model/pyproject.toml
+++ b/model/pyproject.toml
@@ -11,8 +11,7 @@ scikit-learn = "^1.3.0"
 xgboost = "^1.7.6"
 pandas = "^2.0.3"
 
-
-[tool.poetry.group.serving.dependencies]
+[tool.poetry.group.prediction.dependencies]
 fastapi = {extras = ["uvicorn"], version = "^0.100.0"}
 uvicorn = "^0.23.1"
 google-cloud-storage = "^2.10.0"
