--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -16,6 +16,7 @@ packages = [
 python = ">=3.9,<3.11"
 Jinja2 = ">=3.0.1,<4.0.0"
 google-cloud-aiplatform = ">=1.30.1"
+google-cloud-storage = "<2.13.0"
 google-cloud-pipeline-components = "^2.1.0"
 components = { path = "../components", develop = true }
 kfp = "^2.0.1"
